--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CALSAKAY"
         tools:replace="android:icon">
+        <activity
+            android:name=".Signup"
+            android:exported="false" />
         <activity
             android:name=".Conversation"
             android:exported="false">
@@ -36,6 +40,15 @@
             android:name=".MainActivity"
             android:exported="false"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        
+        <provider
+            android:authorities="com.example.calsakay.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
     </application>
 
 </manifest>
