--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,14 @@
         android:theme="@style/Theme.CALSAKAY"
         tools:replace="android:icon">
         <activity
+            android:name=".HIstoryView"
+            android:exported="false" />
+        <activity
             android:name=".Signup"
             android:exported="false" />
         <activity
             android:name=".Conversation"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".SplashScreen"
             android:exported="true"
@@ -39,15 +41,16 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <provider
-            android:authorities="com.example.calsakay.fileprovider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.calsakay.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
     </application>
 
